include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
SUBDIRS = smoke nonsmoke

# These are temporary for Jenkins
# DQ (3/7/2017): These tests are already run (in nonsmoke/functional) or skipped for specific versions of EDG and certain compilers.
# (e.g. EDG 4.9 and Clang, for which we require EDG 4.12 or later version of EDG).
# SUBDIRS += CompileTests roseTests
