add_subdirectory(BinaryAnalysis)
add_subdirectory(checkFortranInterfaces)
add_subdirectory(classMemberVariablesInLambdas)
add_subdirectory(CodeThorn)
add_subdirectory(featureVector)
add_subdirectory(globalVariablesInLambdas)
add_subdirectory(PortabilityTesting)
add_subdirectory(ReadWriteSetGeneration)
