include ../../config/Makefile.for.ROSE.includes.and.libs

SUBDIRS = std

noinst_HEADERS = \
algobase.h    cstdarg     hash_set     multimap.h       slist.h          stl_hashtable.h         stl_vector.h \
algo.h        cstddef     hash_set.h   multiset.h       sstream          stl_heap.h              streambuf.h \
algorithm     cstdio      hashtable.h  numeric          stack            stl_iterator.h          stream.h \
alloc.h       cstdlib     heap.h       ostream.h        stack.h          stl_list.h              strfile.h \
bitset        cstring     indstream.h  pair.h                            stl_map.h               string \
builtinbuf.h  ctime       iomanip      parsestream.h    stdexcept        stl_multimap.h          strstream \
bvector.h                 iomanip.h    pfstream.h       stdiostream.h    stl_multiset.h          strstream.h \
cassert       cwchar      iosfwd       PlotFile.h       stl_algobase.h   stl_numeric.h           tempbuf.h \
cctype        cwctype     iostream     procbuf.h        stl_algo.h       stl_pair.h              tempFile \
cerrno        defalloc.h  iostream.h   pthread_alloc    stl_alloc.h      stl_queue.h             tree.h \
cfloat        deque       istream.h    pthread_alloc.h  stl_bvector.h    stl_raw_storage_iter.h  type_traits.h \
ciso646       deque.h     iterator     queue            stl_config.h     stl_relops.h            utility \
climits       editbuf.h   iterator.h   rope             stl_construct.h  stl_rope.h              valarray \
clocale       fstream     list         rope.h           stl_deque.h      stl_set.h               vector \
cmath         fstream.h   list.h       ropeimpl.h       stl_function.h   stl_slist.h             vector.h \
complex       functional  Makefile.am  set              stl.h            stl_stack.h \
complex.h     function.h  map          set.h            stl_hash_fun.h   stl_tempbuf.h \
csetjmp       hash_map    map.h        SFile.h          stl_hash_map.h   stl_tree.h \
csignal       hash_map.h  memory       slist            stl_hash_set.h   stl_uninitialized.h

