include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs

EXTRA_DIST = CMakeLists.txt                     \
    ARPPRODUCTICON.exe                          \
    PFE32.EXE                                   \
    arm-ctrlaltdel                              \
    arm-nologin                                 \
    arm-pivot_root                              \
    arm-poweroff                                \
    asm_code_samples_gcc.exe                    \
    bgl-helloworld-mpicc                        \
    bgl-helloworld-mpixlc                       \
    buffer2.bin                                 \
    buffer2.raw					\
    buffer2.rot13                               \
    exefmt.exe                                  \
    fnord.i386                                  \
    fnord.ppc                                   \
    gcc-4.0.x-test1.o                           \
    i386-ctrlaltdel                             \
    i386-fsck.cramfs                            \
    i386-nologin                                \
    i386-pivot_root                             \
    i386-poweroff                               \
    i686-test1.O0.bin                           \
    i686-test1.O3.bin                           \
    i686-test1.O3-stripped.bin                  \
    libm-2.3.6.so                               \
    libTest-amd64.a				\
    memreadwrite				\
    pocketputty.exe                             \
    pocketputty2.exe                            \
    proxycfg.exe                                \
    puttytel.exe                                \
    schulz-sample1-p.so                         \
    schulz-sample1.so                           \
    schulz-sample2-p.so                         \
    schulz-sample2.so                           \
    x86-64-ctrlaltdel                           \
    x86-64-nologin                              \
    x86-64-pivot_root                           \
    x86-64-poweroff
